Diplom/ansible/app-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-nginx
  labels:
    app: app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: nginx
        image: cr.yandex/crpgfloaqiho2c5h1t9c/nginx:latest
        ports:
        - containerPort: 80
