Diplom/ansible/app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: app
spec:
  selector:
    app: app
  type: NodePort
  ports:
    - name: app-http
      port: 80
      targetPort: 80
      nodePort: 32200
